@@ -1,0 +1,6 @@
+	/* ARMv8.1 System instructions.  */
+	.text
+
+	/* RAS Extension.  */
+	esb
+	hint #0x10
